# karpathy-0-2-hero

./: basic-calculus.py  demo.ipynb  graph_util.py  main.py  micrograd.py  micrograd_tut.ipynb  mnist.ipynb  nn.py  pyproject.toml  train_mnist.py
makemore/: makemore 3.ipynb  makemore 4.ipynb  makemore 5 - wavenet.ipynb  makemore.ipynb  makemore_mlp.ipynb
mnist_loader/: __init__.py  loader.py
tests/: value_test.py
