[project]
name = "karpathy-0-2-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotext>=5.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter[all]>=1.1.1",
    "jupyterlab[all]>=4.4.10",
    "mypy>=1.18.2",
    "pre-commit>=4.0.1",
    "ruff>=0.14.5",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "plotext.*", "graphviz.*"]
ignore_missing_imports = true
